--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,13 +11,13 @@ cache:
 
 install:
   stage: prepare
-  script: \
-    npm install
+  script:
+    - npm install
 
 build:
   stage: build
-  script: \
-    npm run build
+  script:
+    - npm run build
   artifacts:
     expire_in: 1h
   only:
