Added test job that runs in parallel with the build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,11 @@ build:
     - master
     - merge_requests
 
+test:
+  stage: build
+  script:
+    - npm test
+
 publish:
   stage: publish
   script:
