--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "Matthias Hryniszak <padcom@gmail.com>",
@@ -17,7 +19,8 @@
     "eslint": "^8.42.0",
     "eslint-plugin-vue": "^9.27.0",
     "typescript": "^5.5.4",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^1.6.0"
   },
   "eslintConfig": {
     "extends": "@padcom/eslint-config-vue"
