--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ build:
 publish:
   stage: publish
   script:
-    - echo "VALUE: $JOB_VARIABLE"
+    - "echo VALUE: \"$JOB_VARIABLE\""
     - apt update
     - apt install -y zip
     - cd dist
