--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,7 @@
+{ 
+debug 
+}
+
 http://*.localtest.me {
     # this is how we can extract the first part of the hostname from the Host header
     @site header_regexp site Host ^(.*)\.localtest\.me$
@@ -15,6 +19,29 @@ http://*.localtest.me {
         @resource path /*
         # for the rest keep the URI but prefix it with 'forms/' because that's where it is deployed
         rewrite @resource /{re.site.1}/{uri}
+
+        # proxy requests to Minio server
+        reverse_proxy http://localhost:9000
+    }
+}
+
+http://*.portal.localtest.me {
+    # this is how we can extract the first part of the hostname from the Host header
+    @site header_regexp site Host ^(.*)\.portal\.localtest\.me$
+
+
+    # Since only one matcher is allowed in `rewrite` (or anywhere else for that matter)
+    # we'll use the `handle` directive to further process the request
+    handle @site {
+        # matcher for top-level requests
+        @index path /
+        # for top-level redirect to index.html
+        rewrite @index /portals/{re.site.1}/index.html
+
+        # matcher for sub-requests
+        @resource path /*
+        # for the rest keep the URI but prefix it with '/portal/example' because that's where it is deployed
+        rewrite @resource /portals/{re.site.1}{uri}
 
         # proxy requests to Minio server
         reverse_proxy http://localhost:9000
